--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -775,9 +775,9 @@ body::-webkit-scrollbar {
 
 .status-badge,
 .priority-badge {
-    margin-left: 10px; /* Adjust spacing between text and tag */
-    padding: 5px 10px; /* Adjust padding as needed */
-    border-radius: 50px; /* Match the parent's border-radius for a rounded tag */
+    margin-left: 10px;
+    padding: 5px 10px;
+    border-radius: 50px;
     color: #fef8f0;
 }
 
