--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/admin.css}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script th:inline="javascript">
         var csrfToken = /*[[${_csrf.token}]]*/ '';
     </script>
@@ -32,7 +34,7 @@
             <span class="tooltip">Dashboard</span>
         </li>
         <li>
-            <a href="#">
+            <a th:href="@{/admin/report}">
                 <i class='bx bx-bar-chart-alt'></i>
                 <span class="links_name">Reports</span>
             </a>
