--- a/src/main/resources/templates/admin/includes/sidebar.html
+++ b/src/main/resources/templates/admin/includes/sidebar.html
@@ -55,11 +55,11 @@
             <span class="tooltip">Users</span>
         </li>
         <li>
-            <a href="#">
-                <i class='bx bx-cog'></i>
-                <span class="links_name">Settings</span>
+            <a th:href="@{/}">
+                <i class='bx bx-home'></i>
+                <span class="links_name">Home</span>
             </a>
-            <span class="tooltip">Settings</span>
+            <span class="tooltip">Home</span>
         </li>
     </ul>
     <div class="sidebar_btn">
