--- a/src/main/resources/templates/user/profile_page.html
+++ b/src/main/resources/templates/user/profile_page.html
@@ -32,9 +32,8 @@
                     <li class="list-group-item active" sec:authorize="isAuthenticated()">
                         <a th:href="@{/profile}">Profile</a>
                     </li>
-                    <li class="list-group-item">Notifications</li>
-                    <li class="list-group-item">My Reports</li>
-                    <li class="list-group-item" sec:authorize="hasAuthority('ADMIN')">
+                    <li class="list-group-item"><a th:href="@{/}">My Reports</a></li>
+                    <li class="list-group-item" sec:authorize="hasAnyAuthority('ADMIN', 'DEVELOPER', 'PROJECT MANAGER')">
                         <a th:href="@{/admin}">Developer Dashboard</a>
                     </li>
                 </ul>
